plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    alias libs.plugins.modDevGradle
    alias libs.plugins.machete // automatic jar compressing on build
    // alias libs.plugins.shadow
    alias libs.plugins.spotless
    alias libs.plugins.lombok
}

version = mod_version
group = maven_group

// Mojang ships Java 21 to end users in 1.20.5+, so your mod should target Java 21.
java.toolchain.languageVersion = JavaLanguageVersion.of(21)


// Formats the mod version to include the loader, Minecraft version and '-SNAPSHOT-<timestamp>' if enabled.
boolean isSnapshot = System.getenv("SNAPSHOT")
version = "${mod_version}" + (isSnapshot ? "-SNAPSHOT" : "")

apply from: "$rootDir/gradle/scripts/moddevgradle.gradle"
apply from: "$rootDir/gradle/scripts/repositories.gradle"
apply from: "$rootDir/gradle/scripts/jars.gradle"
apply from: "$rootDir/gradle/scripts/publishing.gradle"
apply from: "$rootDir/dependencies.gradle"
apply from: "$rootDir/gradle/scripts/resources.gradle"
apply from: "$rootDir/gradle/scripts/spotless.gradle"

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

machete {
    // disable machete locally for faster builds
    enabled = false
}

compileJava.options.encoding = 'UTF-8'

lombok {
    version = "1.18.32"
}
